--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,14 +3,10 @@ owner: upptime # Your GitHub organization or username, where this repository liv
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: AppsAnywhere (Softwareportal)
+    url: https://www.campussoft.uzh.ch
+  - name: Software-Procurement-Tool
+    url: https://www.zi.uzh.ch/apps/sw-procurement/de.html
   - name: IPv6 test
     url: forwardemail.net
     port: 80
