--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,7 +4,7 @@ repo: upptime # The name of this repository
 
 sites:
   - name: AppsAnywhere (Softwareportal)
-    url: https://www.campussoft.uzh.ch
+    url: https://campussoft.uzh.ch
   - name: Software-Procurement-Tool
     url: https://www.zi.uzh.ch/apps/sw-procurement/de.html
 
