--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,4 +1,4 @@
-# Change these first
+er# Change these first
 owner: m183037 # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
 
@@ -14,7 +14,7 @@ status-website:
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
-  introTitle: "**Status Monitoring ZI-WPS-TCL**<b>ist ein RealTime Monitoring Tool zur überwachung folgender Websites; Softwareportal, Softwareprocurement-Tool"
+  introTitle: "**Server Monitoring ZI-WPS-TCL**"
   introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
     - title: Status
